<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <GVL Name="GVL_bDrive_4" Id="{c5e8449f-28dd-4b22-8879-b2c6307093f9}">
    <Declaration><![CDATA[VAR_GLOBAL

	bDrive4s01M1		  	AT%Q* :BOOL;	
	bDrive4s01M1Rev	  		AT%Q* :BOOL;

	bDrive4s02M1		  	AT%Q* :BOOL;	
	bDrive4s02M1Rev	  		AT%Q* :BOOL;

	bDrive4s03M1		  	AT%Q* :BOOL;	
	bDrive4s03M1Rev	  		AT%Q* :BOOL;

	bDrive4s04M1		  	AT%Q* :BOOL;	
	bDrive4s04M1Rev	  		AT%Q* :BOOL;

	bDrive4s05M1		  	AT%Q* :BOOL;	
	bDrive4s05M1Rev	  		AT%Q* :BOOL;

	bDrive4s06M1		  	AT%Q* :BOOL;	
	bDrive4s06M1Rev	 	  	AT%Q* :BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>